--- a/site/gallery.html
+++ b/site/gallery.html
@@ -19,12 +19,15 @@
 
       <h2 style="color:navy">Le plan de ma ville</p></h2>
           <span class="map_menu" style="color:navy">Afficher les lieux près de chez moi </span>
-        <input type="text" id="LocalisationRapide"
+          <form action="C:\Users\pc expert\Desktop\Sem Web Project Data\WebSemJavaProject\src\main\java\semweb\RdfRequest.java" method=”post” class="formulaire">
+          	<input type="text" id="LocalisationRapide"
                title="Localisez une voie, un lieu-dit, un quartier, une commune ou un équipement.. (ex: république, creche)"
                placeholder="Votre adresse" style="color:navy; "/>
-               <input type="submit" name="userlocation">
+              <input type="submit" name="userlocation">
+            </form>
       </div>
       <br/>
+
           <span class=" map_menu"  style="color:navy"> Rechercher un type de lieu</span>
         <select >
           <option class="empty"> Sélectionnez dans la liste</option>
