--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
     </div>
  <div class="searchbar">
         <h1>We'll get you the nearest stations from your depart to your destination</h1>
-            <form action="submit.php" class="formulaire">
+            <form action="C:\Users\pc expert\Desktop\Sem Web Project Data\WebSemJavaProject\src\main\java\semweb\RdfRequest.java" method=”post” class="formulaire">
             	<input class="champ" type="text" placeholder="Where are you going from ?"/>
                 <input class="bouton" type="submit" value="go" >               
                 <input class="champ" type="text" placeholder="Where are you headed ?"/>
